# substrate_template_test

./: .gitignore
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  tests.rs
